--- a/Application/Shop/View/style1/Orders/confirm.html
+++ b/Application/Shop/View/style1/Orders/confirm.html
@@ -162,7 +162,7 @@
 					
 					<div class="order-info am-link-muted am-text-right  am-padding-sm">
 						<!--{:count($vo['products'])}-->
-						共<span class="am-text-secondary">{$item.count}</span>件商品 合计: <span class="am-text-secondary js_item">{:number_format($vo['total_price'],2)}<span>
+						共<span class="am-text-secondary">{$item.count}</span>件商品 合计: <span class="am-text-secondary js_item">{:number_format($vo['total_price'],2)}</span>
 					</div>
             		</div>
 				</volist>
