--- a/Application/Shop/View/style1/Pay/pay.html
+++ b/Application/Shop/View/style1/Pay/pay.html
@@ -23,11 +23,11 @@
 			}
 			.header{
 				font-size: 16px;
-				height: 40px;
+				height:50px;
 			}
 			
 			.header .am-topbar{
-				font-size: 0.5rem;
+				font-size: 1rem;
 	  			padding: 5px 16px;
 	  			min-height: 20px;
 	  			margin-bottom: 0px;
@@ -35,7 +35,7 @@
 	  		
 	
 	  		.am-form label{
-	  			font-size: 14px;padding-bottom: 20px;
+	  			font-size: 14px;
 	  		}
 		</style>
 
@@ -50,24 +50,21 @@
 		</div>
 		
 		<div class="am-padding-sm">
-				<div class="am-text-center">
-				合计<span class="am-text-danger">¥
+				<div class="am-text-center" >
+				订单总价:<span class="am-text-danger">¥
 					<span class="js_total_price" >{:number_format($total_fee/100.0,2)}元&nbsp;
 						<if condition="$total_express gt 0">含运费：{:number_format($total_express/100,2)}元</if></span></span>
 				</div>
 				<form class="am-text-left am-form">
-				    <div class="am-radio am-lg-text-left">
-				      <label class="am-radio">
-				        <input type="radio" name="payway" value="1" checked>
-				        微信支付
-				      </label>
+				    <div style="border:1px solid #ccc;padding:1rem;margin-top:0.2rem" >
+				        <input type="radio" name="payway" value="1" id="wxzf" checked="checked">
+				        <label for="wxzf">微信支付</label><img src="__IMG__/LorryGreen.png" style="width:3rem;margin-left:50px">
+
 				    </div>
 				    
-					<div class="am-radio am-lg-text-left">
-				      <label class="am-radio">
-				        <input type="radio" name="payway" value="2" >
-				        货到付款
-				      </label>
+					<div  style="border:1px solid #ccc; padding: 1rem;margin-top:0.2rem">
+				        <input type="radio" name="payway" value="2" id="hdfk">
+						<label for="hdfk"> 货到付款</label><img src="__IMG__/zhifubao.png" style="width: 3rem;margin-left:50px">
 				    </div>
 					
 					<!--<ul class="am-list">
@@ -75,7 +72,7 @@
 						<li >微信支付<i class="am-icon-check am-text-warning am-fr"></i></li>
 					</ul>-->
 				</form>
-				<div class="footer-menu am-text-right ">
+				<div class="footer-menu am-text-right " style="margin-top:0.2rem">
 					<a href="javascript:void(0)" onclick="choose();"  class="am-btn am-btn-sm  am-block am-btn-danger">确定</a>
 				</div>
 		</div>
@@ -132,6 +129,9 @@
 					
 				}
 			}
+
+
+
 		</script>
 		<script type="text/javascript">
 		//调用微信JS api 支付
