--- a/Application/Shop/View/style1/Product/detail.html
+++ b/Application/Shop/View/style1/Product/detail.html
@@ -247,8 +247,11 @@
 		      </a>
 		      
 		    -->
+				<!--
 		      <span  style="background:#FF8000;padding: 0.4rem 3.5rem;font-size: 1rem;color: white;font-family: '微软雅黑'; border-radius: 0.2rem;" onclick='return buyProduct()'><font class="am-icon-dollar"></font>&nbsp;立即购买</span>
-		      <span  style="background: white;margin-left:0.2rem;padding: 0.4rem 3.5rem;font-size:1rem;font-family: '微软雅黑';border-radius: 0.2rem" onclick="addToCart()" ><font class="am-icon-shopping-cart"></font>&nbsp;放入购物车</span>
+		      <span  style="background: white;margin-left:0.2rem;padding: 0.4rem 3.5rem;font-size:1rem;font-family: '微软雅黑';border-radius: 0.2rem" onclick="addToCart()" ><font class="am-icon-shopping-cart"></font>&nbsp;放入购物车</span>-->
+			<div style="float: left;padding-top:0.1rem;padding-bottom:0.1rem;  width: 48%;background:#FF8000;margin-left:1.5%;color: white;font-size: 1rem;border-radius: 0.2rem;" onclick="return buyProduct()"><font class="am-icon-dollar"></font>&nbsp;立即购买</div>
+			<div style=" width: 48%;float: left;padding-top:0.1rem;padding-bottom:0.1rem;  background: white;margin-left:2%;font-size: 1rem;border-radius: 0.2rem;" onclick="addToCart()"><font class="am-icon-shopping-cart"></font>&nbsp;放入购物车</div>
 		</div>
 		<eq name="product['has_sku']" value="1">
 		
