--- a/Application/Shop/View/style1/User/order.html
+++ b/Application/Shop/View/style1/User/order.html
@@ -43,6 +43,7 @@
 		.myorder .am-nav-tabs>li>a{
 			font-size: 1.2rem;
 			margin: 0px;
+			color: #666;
 		}
 		.myorder .am-nav-tabs>li.am-active>a{
 			border: 0px;
