--- a/Application/Shop/View/style1/User/info.html
+++ b/Application/Shop/View/style1/User/info.html
@@ -236,7 +236,7 @@
             <div class="user-logo am-inline-block">
                 <img class="" src="{$userinfo.avatar}" alt="logo" />
                 <span class="logo-circle"></span>
-                <span class="logo-rank">V{$rank['loop']}会员</span>
+                <!--<span class="logo-rank">V{$rank['loop']}会员</span>-->
             </div>
             <div class="username">
                 <span >{$userinfo.nickname}</span>
