--- a/Application/Admin/View/default/Orders/sure.html
+++ b/Application/Admin/View/default/Orders/sure.html
@@ -201,6 +201,11 @@
 	<script src="__CDN__/select2/4.0.0/js/select2.min.js"></script>
 	<script src="__CDN__/select2/4.0.0/js/i18n/zh-CN.js"></script>
 	<script type="text/javascript">
+		$(function(){
+			$('a.num').attr('href',$('a.num').attr('href')+"&payStatus={$payStatus}");
+		})
+
+
 		function cancelOrder(){
 			$('#cancelModal').on('show.bs.modal', function (event) {
 			  var button = $(event.relatedTarget) // Button that triggered the modal
