--- a/Application/Admin/View/default/WxshopProduct/create.html
+++ b/Application/Admin/View/default/WxshopProduct/create.html
@@ -126,6 +126,15 @@
 								<span class="help-block"></span>
 							</div>
 						</div>
+
+						<div class="form-group col-lg-12 col-md-12 clearfix js_frm_gp_sku">
+							<label for="" class="control-label col-lg-2 col-md-2">佣金</label>
+							<div class="col-lg-10 col-md-10">
+								<input name="profit" class="price form-control input-short input-sm" />元
+								<span class="help-block" style="color: red">注意：获得营业额=销售价-佣金</span>
+							</div>
+						</div>
+
 						<div class="form-group col-lg-12 col-md-12 clearfix js_frm_gp_sku">
 							<label for="" class="control-label col-lg-2 col-md-2 ">商品库存
 								<br/><span class="help-block"></span>
