--- a/Application/Admin/View/default/Store/index.html
+++ b/Application/Admin/View/default/Store/index.html
@@ -14,7 +14,7 @@
 				<!-- 过滤\查询按钮 -->
 				<div class="filter-controls">
 					<!-- 日期查询 -->
-					<form action="{:U('Admin/Wxshop/index')}" method="post" class="form-inline">
+					<form action="{:U('Admin/Store/index')}" method="post" class="form-inline">
 						<div class="form-group">
 							<label>店铺名称</label>
 							<input type="text" name="name" value="{$name}" class="form-control input-sm" placeholder="店铺名称" />
@@ -24,7 +24,7 @@
 				</div>
 				<!-- 操作按钮 -->
 				<div class="btn-controls">
-					<a class="btn btn-primary btn-sm" href="{:U('Admin/Wxshop/add')}"><i class="fa fa-plus"></i>{:L('BTN_ADD')}</a>
+					<a class="btn btn-primary btn-sm" href="{:U('Admin/Store/add')}"><i class="fa fa-plus"></i>{:L('BTN_ADD')}</a>
 				
 				</div>
 
@@ -67,10 +67,7 @@
 									<td>
 										{$vo.create_time|date='Y-m-d h:i:s',###}
 									</td>			
-									<!--<td>
-										{:($vo['isopen'] == "1"?"营业中":"休息中")}
-										<a href="{:U('Admin/Wxshop/open',array('id'=>$vo['id'],'isopen'=>$vo['isopen']))}" class="btn btn-primary btn-sm ajax-get" ><i class="fa fa-chain"></i>{:($vo['isopen'] == "1"?"改为休息":"改为营业")}</a>
-									</td>-->
+
 									
 									<td>
 										<a href="{:U('Admin/WxshopProduct/index',array('storeid'=>$vo['id']))}" class="btn btn-sm btn-primary"><i class="fa fa-building"></i>店铺商品管理</a>
