--- a/Application/Shop/View/style1/Index/index.html
+++ b/Application/Shop/View/style1/Index/index.html
@@ -283,6 +283,9 @@
 
 			.span_g{padding-top:0.3rem;padding-bottom:0.3rem;padding-left:5px;font-weight: bold;font-size: 0.3rem}
 			.span_more{margin-left: 65%;font-size:0.3rem}
+
+            .theme-shop {display:none;}
+            .theme-shop.domloaded{display: block}
         </style>
 </head>
 <body class="theme-default theme-shop ">
