--- a/Application/Shop/View/style1/Index/index.html
+++ b/Application/Shop/View/style1/Index/index.html
@@ -419,28 +419,35 @@
     	描述：首页嵌入广告02
     -->
 
-
+<neq name="new_products" value="-1">
 <div style="width: 100%;margin-top: 20px;background: white;padding-top:0.2rem;padding-bottom:0.2rem;">
 	<span style="background:green; padding:0.3rem 0.1rem;"></span>
 	<span class="span_g">最新商品</span>
 	<a class="a_more" href="{:U('Shop/Product/search',array('g_id'=>$g_id_new))}"><span  class="span_more">更多<span class="am-icon-caret-square-o-right" style="color:green"></span></span></a>
 </div>
-<div class="product-list grid">
-	<volist name="new_products" id="vo">
-		<div class="product-wrp col-6">
-			<div class="product-item">
-				<a href="{:U('Shop/Product/detail',array('id'=>$vo['id']))}">
-					<div class="p-main-img" ><img src="__IMG__/p240x240.jpg" data-original="{$vo.main_img}" class="lazy" alt="{$vo.name}"/></div>
-					<div class="p-name" >{$vo.name}</div>
-					<div class="p-price" >¥{:number_format($vo['price']/100,1)}<del>¥{:number_format($vo['ori_price']/100,1)}</del></div>
-					<i class="zk" style="background: green">New</i>
-				</a>
+
+	<div class="product-list grid">
+		<volist name="new_products" id="vo">
+			<div class="product-wrp col-6">
+				<div class="product-item">
+					<a href="{:U('Shop/Product/detail',array('id'=>$vo['id']))}">
+						<div class="p-main-img" ><img src="__IMG__/p240x240.jpg" data-original="{$vo.main_img}" class="lazy" alt="{$vo.name}"/></div>
+						<div class="p_info"  style="width: 100%;background:black;opacity:0.5;position: relative;margin-top:-36px;z-index: 10">&nbsp;</div>
+						<div class="p_name" style="width: 100%;position: relative;color:white;margin-top:-36px;z-index: 11;text-align: left;padding-left: 5px">{$vo.name}</div>
+						<div class="p_price" style="padding-top:0.2rem;padding-bottom: 0.2rem;color:#ff5000;text-align: left; padding-left: 5px;" >¥{:number_format($vo['price']/100,1)}<del style="color: #9e9e9e;margin-left: 10px;font-size: 20px">¥{:number_format($vo['ori_price']/100,1)}</del></div>
+						<!--<div class="p-price" >¥{:number_format($vo['price']/100,1)}<del>¥{:number_format($vo['ori_price']/100,1)}</del></div>
+						<i class="zk" style="background: green">New</i>-->
+					</a>
+				</div>
 			</div>
-		</div>
-	</volist>
-</div>
+		</volist>
+	</div>
+
+</neq>
 
 
+
+<neq name="hot_products" value="-1">
 <div style="width: 100%;margin-top: 20px;background: white;padding-top:0.2rem;padding-bottom:0.2rem;">
 	<span style="background:red; padding:0.3rem 0.1rem;"></span>
 	<span class="span_g">热门商品</span>
@@ -461,11 +468,11 @@
 		</div>
 	</volist>
 </div>
+</neq>
 
 
 
-
-
+<neq name="recommend_products" value="-1">
 <div style="width: 100%;margin-top: 20px;background: white;padding-top:0.2rem;padding-bottom:0.2rem;">
 	<span style="background:blue; padding:0.3rem 0.1rem;"></span>
 	<span class="span_g">推荐商品</span>
@@ -486,7 +493,7 @@
 		</div>
 	</volist>
 </div>
-
+</neq>
 
 <volist name="ads" id="ad">
 	<div class="ad">
