--- a/Application/Shop/View/style1/Orders/evaluation.html
+++ b/Application/Shop/View/style1/Orders/evaluation.html
@@ -166,8 +166,26 @@
 		.J_rate_plugin .oc-star-n .star5 {
 			background-position: 0 -30px;
 		}
-		
-  
+
+		.theme-shop .am-gotop-fixed {
+			bottom: 3rem;
+			left: 0.2rem;
+			width: 3rem;
+		}
+		.theme-shop .am-gotop-fixed .am-gotop-icon {
+			width: 100%;
+			height:3rem;
+			line-height: 1.6rem;
+			background-color: #FF4400;
+			vertical-align: middle;
+			color: #FAFAFA;
+			border-radius: 50%;
+		}
+
+		a.am-btn:link{color: white;}
+		a.am-btn:hover{color: white;}
+		a.am-btn:active{color: white;}
+		a.am-btn:visited{color: white;}
 	</style>
 
 	
