--- a/Application/Admin/View/default/Advert/add.html
+++ b/Application/Admin/View/default/Advert/add.html
@@ -48,12 +48,12 @@
 						</div>
 					</div>
                     <div class="form-group">
-                        <label for="inputtitle" class="col-md-2 col-lg-2 control-label">广告位置</label>
+                        <label for="inputtitle" class="col-md-2 col-lg-2 control-label">广告类型</label>
                         <div class="col-md-10 col-lg-10">
                                 <select name="position" class="form-control  input-normal" >
                                     {:W("Partials/datatree",array(getDatatree('ADVERT_POSITION'),true))}
                                 </select>
-                                <div class="help-block">(选择位置)</div>
+                                <div class="help-block">(选择类型)</div>
                         </div>
                     </div>
 					<div class="form-group">
@@ -64,21 +64,29 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<label for="inputtitle" class="col-md-2 col-lg-2 control-label">广告图片地址</label>
-						<div class="col-md-10 col-lg-10">
-							<input type="hidden" class="" name="img" id="img" placeholder="">
-							<!-- 图片选择DOM结构 -->
-							<div class="wxuploaderimg clearfix advert" data-maxitems="1">
-								<div class="img-preview clearfix" >
-									
-								</div>
-								<div class="add">
-									<i class="fa fa-plus"></i>
-								</div>
+					<label for="inputtitle" class="col-md-2 col-lg-2 control-label">广告图片地址</label>
+					<div class="col-md-10 col-lg-10">
+						<input type="hidden" class="" name="img" id="img" placeholder="">
+						<!-- 图片选择DOM结构 -->
+						<div class="wxuploaderimg clearfix advert" data-maxitems="1">
+							<div class="img-preview clearfix" >
+
 							</div>
-							<!-- 图片选择DOM结构 -->
-							
-							<div class="help-block">(上传图片,大尺寸：320像素*200像素，小尺寸：160像素*100像素 )</div>
+							<div class="add">
+								<i class="fa fa-plus"></i>
+							</div>
+						</div>
+						<!-- 图片选择DOM结构 -->
+
+						<div class="help-block">(图片)</div>
+					</div>
+				</div>
+
+					<div class="form-group">
+						<label for="inputtitle" class="col-md-2 col-lg-2 control-label">上传视频：</label>
+						<div class="col-md-10 col-lg-10">
+							<input name=""  class="form-control" type="file" />
+							<div class="help-block">(视频地址)</div>
 						</div>
 					</div>
 					<div class="form-group">
